manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-webapp
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
