manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://kv-francecentral-prod-02.vault.azure.net/certificates/wildcard-krfalab-com/4dfdd940a18a4212a015bec7100b87fb
  name: demo-webapp-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: demo-webapp.krfa-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
  tls:
  - hosts:
    - demo-webapp.krfa-lab.com
    secretName: keyvault-demo-webapp-ingress
